# tgif

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  helper.py  results.csv
assets/: img.tgif
src/: args.rs  code.rs  codebooks.rs  constants.rs  decode.rs  encode.rs  from_tgif.rs  header.rs  main.rs  to_tgif.rs
