[package]
name = "tgif_rc_fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
clap = { version = "3.1.17", features = ["derive"] }
chrono = "0.4"
log = "0.4.0"
image = "0.24.3"
ndarray = { version = "0.15.4", features = ["rayon"]}
nshare = {version = "0.9.0", features = ["image", "ndarray"]}
rayon = "1.5.3"