[package]
name = "tgif"
version = "1.0.0"
edition = "2021"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
clap = { version = "3.1.17", features = ["derive"] }
chrono = "0.4"
log = "0.4.0"
image = "0.24.3"
ndarray = { version = "0.15.4"}
nshare = {version = "0.9.0", features = ["image", "ndarray"]}
camino = "1.1.1"
permutation = "0.4.1"
