[package]
name = "tgif"
version = "1.0.0"
edition = "2021"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]

[profile.release]
lto = true

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
chrono = "0.4"
log = "0.4.0"
image = "0.24.3"
ndarray = { version = "0.15.4", features = ["rayon"]}
nshare = {version = "0.9.0", features = ["image", "ndarray"]}
camino = "1.1.1"
rayon = "1.5.3"
